# chocolate_joe_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  compose.yml  dockerfile  main.py  notify.py  pyproject.toml  requirements.txt  tmp.py
.github/workflows/: deploy.yml
chatbot/: chocolate_joe.py  ollama_client.py  prompt.py  prompter.py
src/: chocolate_joe.py  redis_db.py
src/agent/: lc_agent.py  redis_history.py
src/agent/llm/: lc_model.py
src/agent/prompts/: command_messages.py  joe.py  prompter.py  tasks.py
src/chatbot/: __init__.py  chocolate_joe.py  prompt.py  prompter.py
src/database/: redis_db.py
src/schemas/: chat.py
src/utils/: logger.py
